--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>简单网页</title>
+</head>
 <body>
-欢迎加入实验计划！
-<body>
+    <p>欢迎来到我的网页。</p>
+</body>
+</html>
