--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>简单网页</title>
 </head>
 <body>
-    <p>欢迎来到我的网页。</p>
+    <p>["作者的话","1.0","https://github.com/cyzyq/ds"]</p>
 </body>
 </html>
