--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>简单网页</title>
 </head>
 <body>
-    <p>["作者的话","1.0","https://github.com/cyzyq/ds"]</p>
+    <p>["作者的话","1.0","https://download6.mcloud.139.com/storageWeb/servlet/downloadServlet?code=TUEwTTExY2puUkoxWmw3MDgxN3lMdmpTZ0ZJ&un=96ABEB29FDE77DA336F2F7A81AF8678266DBC1A89A9294601FCC3D198D9F3F25&dom=D933&rate=0&txType=0"]</p>
 </body>
 </html>
