--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>简单网页</title>
 </head>
 <body>
-    <p>["天天开心","1.0","https://download6.mcloud.139.com/storageWeb/servlet/downloadServlet?code=TUEwTTExY2puUkoxWmw3MDgxN3lMdmpTZ0ZJ&un=96ABEB29FDE77DA336F2F7A81AF8678266DBC1A89A9294601FCC3D198D9F3F25&dom=D933&rate=0&txType=0"]</p>
+    <p>["天天看看开心","1.0","https://download6.mcloud.139.com/storageWeb/servlet/downloadServlet?code=TUEwTTExY2puUkoxWmw3MTcxN3lMd2Fzd21f&un=7AD4E35946BD7CC0BADDD31B5A188FD3E26D302531486168933B6903F78FE814&dom=D933&rate=0&txType=0"]</p>
 </body>
 </html>
